<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Device Tester</string>
    <string name="print_test">Print Test</string>
    <string name="printer_version">Printer Version?</string>
    <string name="bar_code">Barcode:</string>
    <string name="print_bar_code">Print Barcode</string>
    <string name="D_bar_code">Qrcode:</string>
    <string name="print_2D_barcode">Print Qrcode</string>
    <string name="walk_paper_lines">Walk Paper Lines:</string>
    <string name="walk_paper_test">Walk Paper</string>
    <string name="left_margin">Left Margin:</string>
    <string name="right_margin">Right Margin</string>
    <string name="row_space">Row Space:</string>
    <string name="font_size">Font Size?</string>
    <string name="gray_level">Gray Level:</string>
    <string name="print_style_italic_enable">Enable Italic</string>
    <string name="print_style_italic_disable">Disable Italic</string>
    <string name="print_style_three_height_enable">Enable three height</string>
    <string name="print_style_three_height_disable">Disable three height</string>
    <string name="print_style_two_width_enable">Enable two width</string>
    <string name="print_style_two_width_disable">Disable two width</string>
    <string name="print_content">Print Content?</string>
    <string name="chinese_example">ZH Example</string>
    <string name="english_example">EN Example</string>
    <string name="persian_example">Persian Example</string>
    <string name="french_example">French Example</string>
    <string name="japanese_example">Japanese Example</string>
    <string name="korean_example">Korean Example</string>
    <string name="russian_example">Russian Example</string>
    <string name="thailand_example">Thai Example</string>
    <string name="cambodia_example">Khmer Example</string>
    <string name="laos_example">Laos Example</string>
    <string name="print_count">Print Count:</string>
    <string name="print_cut_count">Cut Count:</string>
    <string name="clear_text">Clear</string>
    <string name="print_text">Print Text</string>
    <string name="print_columns">Print Columns</string>
    <string name="check_status">Check Status</string>
    <string name="print_georgia_text">Print Georgia</string>
    <string name="print_foreign_text">Print Special Language</string>
    <string name="printing_wait">Printing, please wait��</string>
    <string name="D_barcode_loading">Qrcode loading</string>
    <string name="generate_barcode_wait">Generating barcode, please wait��</string>
    <string name="input_print_data">Please input print data</string>
    <string name="print_paper_width">Paper Width:</string>
    <string name="printer_paper_80mm">80mm</string>
    <string name="printer_paper_58mm">58mm</string>
    <string name="maker_search_distance">Walk Paper For Search Black Block:</string>
    <string name="maker_walk_distance">Walk Paper After Haved Search:</string>
    <string name="maker_walk_distance_range">(0-255)</string>
    <string name="maker">Black Block Detection</string>
    <string name="maker_error">maker input value not fit</string>
    <string name="maker_not_find">Cannot Find Black Block</string>
    <string name="papercut">Paper Cut</string>
    <string name="inverse">inverse</string>
    <string name="not_inverse">not inverse</string>
    <string name="walk_paper_intput_value">walk paper intput value not fit</string>
    <string name="print_picture">Print Picture</string>
    <string name="print_long_picture">Print Long Picture</string>
    <string name="print_long_text">Print Long Text</string>
    <string name="print_black">Print Black</string>
    <string name="print_interval">Cricle Print Interval</string>
    <string name="print_cricle_start">Start Cricle Paint</string>
    <string name="print_cricle_stop">Stop Cricle Paint</string>
    <string name="print_cricle_hint">sec/time</string>
    <string name="sure">sure</string>
    <string name="not_find_picture">not find picture</string>
    <string name="input_command">Please Input Command</string>
    <string name="execute_command">Execute Command</string>
    <string name="watting">Please wait while checking driver version</string>
    <string name="openDoor">Printer cover open?</string>
    <string name="hardwareAlarm">Hardware alarm</string>
    <string name="printerReset">Reset Printer/Printer alarm Cleared</string>
    <string name="noPaper">No paper</string>
    <string name="paperReady">Paper already</string>
    <string name="paperCutError">Paper cutting error</string>
    <string name="coverColse">Printer cover Close</string>
    <string name="noPaperNotice">No paper, please put paper in and retry</string>
    <string name="LowBattery">Low battery, please connect the charger!</string>
    <string name="overTemp">over temp !</string>
    <string name="ptintInit">Printer initialing... Please try again after a few seconds.</string>
    <string name="outOfLeft">Beyond the left margin?</string>
    <string name="outOfLine">Beyond the row space?</string>
    <string name="outOfFont">Beyond the font size?</string>
    <string name="outOfGray">Beyond the gray level?</string>
    <string name="outOfCharSpace">Beyond The Char Space?</string>
    <string name="empty">The content is empty?</string>
    <string name="lengthNotEnougth">The length is not enough?</string>
    <string name="index_text">Print Text</string>
    <string name="index_pic">Picture/Qrcode</string>
    <string name="index_comm">Print Command</string>
    <string name="input_content">input content</string>
    <string name="dialog_comfirm">ConFirm</string>
    <string name="operation_result">Result</string>
    <string name="bl_dy">Print</string>
    <string name="print_waring">Tip: If the SDK provides the function of can not meet your printing needs, you can send the print instruction way for implementation</string>
    <string name="printer_type_80mm">80mm Printer</string>
    <string name="printer_type_58mm">58mm Printer</string>
    <string name="printer_type_select">Select Printer Type</string>
    <string name="string_offset_range">(0-255)Multiple of 8</string>
    <string name="short_text_content">Short Text</string>
    <string name="hint_short_text">Short Text Within A Line</string>
    <string name="print_short_text">Print Short Text</string>
    <string name="param_error">Invalid Argument</string>
    <string name="auto_linefeed">Auto Linefeed</string>
    <string name="text_bold">Bold Font</string>
    <string name="text_too_long">Text too long</string>
    <string name="text_format_error">Text With Wrong Format</string>
    <string name="interval_format_error">Print Interval With Wrong Format</string>
    <string name="not_support">Linefeed Is Disabled</string>
    <string name="checkPrinterType">Detect printer type</string>
    <string name="check_error">The detection fails, please check whether there is no paper and whether the cover is closed</string>
    <string name="printContent1">\n             ??\n----------------------------\n???2015-01-01 16:18:20\n???12378945664\n???1001000000000529142\n----------------------------\n  ??    ??   ??  ??\n?????  1    56    56\n????    2    24    48\n???      2    50    100\n????    1    40    40\n???      1    200   200\n?????  1    50    50\n????    2    23    46\n?????  1    56    56\n????    2    24    48\n???      2    50    100\n????    1    40    40\n???      1    200   200\n?????  1    50    50\n????    2    23    46\n?????  1    56    56\n????    2    24    48\n???      2    50    100\n????    1    40    40\n???      1    200   200\n?????  1    50    50\n????    2    23    46\n?????  1    56    56\n????    2    24    48\n???      2    50    100\n????    1    40    40\n???      1    200   200\n?????  1    50    50\n????    2    23    46\n????    2    23    46\n?????  1    56    56\n????    2    24    48\n???      2    50    100\n????    1    40    40\n???      1    200   200\n?????  1    50    50\n????    2    23    46\n ???1000?00?\n----------------------------\n?????10000.00\n?????1000.00\n?????9000.00\n----------------------------\n ????????????????????45??????A317.B-18??\n????????\n</string>
    <string name="tem_cannt_null">The temperature protection value cannot be empty</string>
    <string name="tem_set_wrong">The temperature protection value is set incorrectly</string>
    <string name="tem_set_success">set successfully</string>
    <string name="str581">\n             ??\n----------------------------\n???2015-01-01 16:18:20\n???12378945664\n???1001000000000529142\n----------------------------\n  ??          ??    ??    ??\n?????     1       56       56\n????        2       24       48\n???           2       50       100\n????        1       40       40\n???           1       200     200\n?????     1       50       50\n????        2       23       46\n?????     1       56       56\n????        2       24       48\n???           2       50       100\n????        1       40       40\n???           1       200     200\n?????     1       50       50\n????        2       23       46\n?????     1       56       56\n????        2       24       48\n???           2       50       100\n????        1       40       40\n???           1       200     200\n?????     1       50       50\n????        2       23       46\n?????     1       56       56\n????        2       24       48\n???           2       50       100\n????        1       40       40\n???           1       200     200\n?????     1       50       50\n????        2       23       46\n?????     1       56       56\n????        2       24       48\n???           2       50       100\n????        1       40       40\n???           1       200     200\n?????     1       50       50\n????        2       23       46\n ???1000?00?\n----------------------------\n?????10000.00\n?????1000.00\n?????9000.00\n----------------------------\n ????????????????????45??????A317.B-18??\n????????\n</string>
    <string name="print_check_info">print check info</string>
    <string name="hal_version">hardware version:</string>
    <string name="soft_version">software version:</string>
    <string name="print_addtext_count">text count(len):</string>
    <string name="qrcode_verify">Qrcode</string>
    <string name="qrcode_dialog_title">Select decoding type</string>
    <string name="qrcode_dialog_msg">Please select read head decoding type</string>
    <string name="authenticate_with_fingerprint">Authenticate with Fingerprint</string>
    <string name="retry">Retry</string>
    <string name="auth">AUTH</string>
    <string name="led_and_flashlight_test">LED and Flashlight Test</string>
    <string name="test_led_notification">Test LED Notification</string>
    <string name="start_blinking">Start Blinking</string>
    <string name="stop_blinking">Stop Blinking</string>
    <string name="battery_level_unknown_r">Battery Level: Unknown</string>
    <string name="wake_lock_status_unknown_r">Wake Lock Status: Unknown</string>
    <string name="acquire_wake_lock_r">Acquire Wake Lock</string>
    <string name="release_wake_lock_r">Release Wake Lock</string>
    <string name="check_battery_status_r">Check Battery Status</string>
    <string name="schedule_wake_up_alarm_r">Schedule Wake-Up Alarm</string>
    <string name="lock_locker">Lock Locker</string>
    <string name="unlock_locker">Unlock Locker</string>
    <string name="locker_status_unknown">Locker Status: Unknown</string>
    <string name="connect_to_locker">Connect to Locker</string>
    <string name="disconnect_from_locker">Disconnect From Locker</string>
    <string name="ethernet_status_unknown">Ethernet Status: Unknown</string>
    <string name="run_ping_test">Run Ping Test</string>
    <string name="ping_result_n_a">Ping Result: N/A</string>
    <string name="bluetooth_printer">Bluetooth Printer</string>
    <string name="find_printers">Find Printers</string>
    <string name="print_invoice">Print Invoice</string>
</resources>