<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.telpo.tps550.api.demo.customize.camera.LEDIndicatorActivity"
android:padding="16dp"
android:background="#f5f5f5">

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/led_and_flashlight_test"
    android:textSize="24sp"
    android:textColor="#333"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="24dp" />

<Button
    android:id="@+id/buttonLEDTest"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/test_led_notification"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="80dp" />

    <Button
        android:id="@+id/btnStartBlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_blinking"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp" />

    <Button
        android:id="@+id/btnStopBlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_blinking"
        android:layout_below="@id/btnStartBlink"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
