<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.telpo.tps550.api.demo.customize.EthernetTestActivity"
android:orientation="vertical"
android:padding="16dp">

<TextView
    android:id="@+id/ethernetStatusTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ethernet_status_unknown"
    android:textSize="18sp"
    android:layout_marginBottom="20dp" />

<Button
    android:id="@+id/pingTestButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/run_ping_test"
    android:padding="10dp" />

<TextView
    android:id="@+id/pingResultTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/ping_result_n_a"
    android:textSize="16sp" />
</LinearLayout>
